fix collapse lines contrast

--- a/files/assets/css/main.css
+++ b/files/assets/css/main.css
@@ -7570,3 +7570,7 @@ bdi {
 #system {
 	font-size: 16px;
 }
+
+.comment-collapse-desktop {
+	border-left: 2px solid;
+}
